Implement swagger UI and create controller and models for user

--- a/specification-module/pom.xml
+++ b/specification-module/pom.xml
@@ -189,8 +189,8 @@
                                 <generateApiDocumentation>true</generateApiDocumentation>
                                 <generateModelDocumentation>true</generateModelDocumentation>
                                 <configOptions>
-                                    <delegatePattern>true</delegatePattern>
-                                    <configPackage>${project-base-package}.swagger</configPackage>
+                                    <delegatePattern>false</delegatePattern>
+                                    <configPackage>com.skyhigh.vehiclechain.config.swagger</configPackage>
                                 </configOptions>
                             </configuration>
                         </execution>
