--- a/vehicle-mgt-module/src/main/resources/application.properties
+++ b/vehicle-mgt-module/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+server.port=8080
+#spring.jackson.date-format=com.skyhigh.vehiclechain.swagger.RFC3339DateFormat
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/vehiclechain_db
 spring.datasource.username=isuru
