--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
+        <springfox-version>2.8.0</springfox-version>
     </properties>
     <dependencies>
         <dependency>
