--- a/specification-module/pom.xml
+++ b/specification-module/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>swagger-annotations</artifactId>
             <version>${swagger-annotations-version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-oas</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>io.swagger.parser.v3</groupId>-->
 <!--            <artifactId>swagger-parser</artifactId>-->
